# Project-Halide

./: .gitignore  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
data/: __init__.py  augmentation.py  datasets.py  preprocessing.py  schemas.py  training_data.jsonl  training_sharegpt.json  training_sharegpt_v4.json  training_sharegpt_val.json  training_sharegpt_val_v4.json
docs/: field-notes.md  training-and-evaluation.md
modal/: __init__.py  app.py  convert_gguf.py  deploy_space.py  test_reasoning.py  train_reasoning.py  train_vision.py  upload_model.py  view_inference.py
models/: __init__.py
models/reasoning/: inference.py  nemotron_wrapper.py  prompts.py
pipeline/: __init__.py  diagnoser.py  extractor.py  pipeline.py
scripts/: __init__.py  augment_training.py  combine_sharegpt.py  convert_to_sharegpt.py  download_datasets.py  evaluate.py  generate_v4_synthetic_dataset.py  generate_v5_negative_curriculum.py  openbmb_api_smoke.py  prepare_space_bundle.py  prepare_test_images.py  prepare_training.py  run_private_negative_eval.py  spawn_modal_training.py  summarize_training_log.py  upload_model.py  view_inference.py  visualize_annotations.py
space/: README.md  app.py  requirements.txt
storage/: __init__.py  cache.py  database.py  halide.db
tests/: test_config.py  test_data_and_evaluate.py  test_openbmb_api.py  test_pipeline.py  test_private_negative_eval.py  test_reasoning.py  test_storage.py  test_ui.py  test_vision.py  view_inference.py
ui/: app.py  components.py  server.py  theme.py
(+17 files in other folders)
